[package]
name = "il4il-playground"
version = "0.1.0"
description = "IL4IL interactive assembly for WASM"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
il4il = { path = "../il4il" }
il4il_asm = { path = "../il4il_asm" }
wasm-bindgen = "0.2.83"
